stable point for testing

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -1,19 +1,19 @@
 #######################################################################
 #The possible properties and their default values are:  
-#com.xceptance.xlt.ai.util.Constants.WAITINGTIME = 1000   
-#com.xceptance.xlt.ai.util.Constants.INTENDED_PERCENTAGE_MATCH = 0.80
-#com.xceptance.xlt.ai.util.Constants.USE_COLOR_FOR_COMPARISON = false
-#com.xceptance.xlt.ai.util.Constants.USE_ORIGINAL_SIZE = false
-#com.xceptance.xlt.ai.util.Constants.PERCENTAGE_DIFFERENCE = 10
-#com.xceptance.xlt.ai.util.Constants.LEARNING_RATE = 10
-#com.xceptance.xlt.ai.util.Constants.FORMAT = "png"
-#com.xceptance.xlt.ai.util.Constants.IMAGE_HEIGHT = 1200
-#com.xceptance.xlt.ai.util.Constants.IMAGE_WIDTH = 800
-#com.xceptance.xlt.ai.util.Constants.EXTENSIONS = {"jpg", "png", "bmp", jpeg""}
+#com.xceptance.xlt.ai.WAITINGTIME = 1000   
+#com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
+#com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
+#com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+#com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
+#com.xceptance.xlt.ai.LEARNING_RATE = 0.2
+#com.xceptance.xlt.ai.FORMAT = "png"
+#com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
+#com.xceptance.xlt.ai.IMAGE_WIDTH = 600
+#com.xceptance.xlt.ai.EXTENSIONS = {"jpg", "png", "bmp", jpeg""}
 #########################################################################
 
 # Global flag to turn visual asserations off, nothing will be done, all code is skipped
-com.xceptance.xlt.ai.visualassertion.enabled = true
+com.xceptance.xlt.ai.enabled = true
 
 # Result directory for the image output, relative to the test suite
 # main directory
