minor changes in different files, added the option to give a destination per parameter for the modules

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -4,12 +4,11 @@
 #com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 #com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 #com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+#com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
+#com.xceptance.xlt.ai.IMAGE_WIDTH = 600
 #com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
 #com.xceptance.xlt.ai.LEARNING_RATE = 0.2
 #com.xceptance.xlt.ai.FORMAT = "png"
-#com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
-#com.xceptance.xlt.ai.IMAGE_WIDTH = 600
-#com.xceptance.xlt.ai.EXTENSIONS = {"jpg", "png", "bmp", jpeg""}
 #########################################################################
 
 # Global flag to turn visual asserations off, nothing will be done, all code is skipped
@@ -19,23 +18,21 @@ com.xceptance.xlt.ai.enabled = true
 # main directory
 com.xceptance.xlt.ai.resultDirectory = results/ai
 
-## ID for the current environment that hosts the visualassertion module. 
-## The ID is used in the creation of the folder structure for the results. 
-## This should be used like this for now, because different environment create different screenshot which might cause an assertion to
-## fail, even if the page is still valid.
+# ID for the current environment that hosts the AI module. 
+# The ID is used in the creation of the folder structure for the results. 
 com.xceptance.xlt.ai.ID = localmachine
 
 # The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.ai.waitingTime = 1000
 
 # Desired percentage value for the self test, until this barrier is confirmed the network will 
-# still learn (use several images which where already seen)
+# still learn (use several screenshots which where already seen)
 # procedural value between 0 - 100.00 percent
 com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 
-# Color will also be used for image comparison, not recommended for websides with many images
+# Color will also be used for image comparison, not recommended for websides with many screenshots
 # or consequently changing content 
-com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
+com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
@@ -47,7 +44,7 @@ com.xceptance.xlt.ai.IMAGE_HEIGHT = 600
 # value for the width of the image, only used if USE_ORIGINAL_SIZE is false
 com.xceptance.xlt.ai.IMAGE_WIDTH = 1000
 
-# procedural value for the difference level used for comparing the images to another
+# procedural value for the difference level used for comparing the screenshots to another
 com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
@@ -58,8 +55,5 @@ com.xceptance.xlt.ai.LEARNING_RATE = 0.2
 # image format for saving
 # compatible formats are jpg, png, bmp, jpeg
 com.xceptance.xlt.ai.FORMAT = png
-
-# string array of allowed file extensions
-#com.xceptance.xlt.ai.EXTENSIONS = new String[]	{"jpg",	"png", "bmp" , "jpeg"};
 #########################################################################
 
