added parameter for external controll of training

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -22,8 +22,16 @@ com.xceptance.xlt.ai.resultDirectory = results/ai
 # The ID is used in the creation of the folder structure for the results. 
 com.xceptance.xlt.ai.ID = localmachine
 
+# Set the state of the network to training
+# com.xceptance.xlt.ai.TRAINING = true 
+# or to classification mode.
+# com.xceptance.xlt.ai.TRAINING = false
+# In training mode all data under the specific name of the network, in the training directory "used for training"
+# will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
+com.xceptance.xlt.ai.TRAINING = false
+
 # The time the program waits for a page to load before it takes the screenshot
-com.xceptance.xlt.ai.waitingTime = 1000
+com.xceptance.xlt.ai.WAITINGTIME = 1000
 
 # Desired percentage value for the self test, until this barrier is confirmed the network will 
 # still learn (use several screenshots which where already seen)
