Test case name using or not implemented

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -1,5 +1,8 @@
 #######################################################################
-#The possible properties and their default values are:  
+#The possible properties and their default values are: 
+#com.xceptance.xlt.ai.TESTCASE_BOUND = true
+#com.xceptance.xlt.ai.TESTCASE_NAME = unbound
+#com.xceptance.xlt.ai.TRAINING = true
 #com.xceptance.xlt.ai.WAITINGTIME = 1000   
 #com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 #com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
@@ -21,6 +24,14 @@ com.xceptance.xlt.ai.resultDirectory = results/ai
 # ID for the current environment that hosts the AI module. 
 # The ID is used in the creation of the folder structure for the results. 
 com.xceptance.xlt.ai.ID = localmachine
+
+# Bound to the choosen test case or not.
+# If the flag is true the name of the used test case will be used for localization.
+# the value false let the network unbound and can be used for different testcases
+com.xceptance.xlt.ai.TESTCASE_BOUND = false
+
+# Possibility to name the unbound folder.
+com.xceptance.xlt.ai.TESTCASE_NAME = unbound
 
 # Set the state of the network to training
 # com.xceptance.xlt.ai.TRAINING = true 
