--- a/config/ai.properties
+++ b/config/ai.properties
@@ -31,7 +31,7 @@ com.xceptance.xlt.ai.ID = localmachine
 com.xceptance.xlt.ai.TESTCASE_BOUND = false
 
 # Possibility to name the unbound folder.
-com.xceptance.xlt.ai.TESTCASE_NAME = unbound
+com.xceptance.xlt.ai.TESTCASE_NAME = name
 
 # Set the state of the network to training
 # com.xceptance.xlt.ai.TRAINING = true 
@@ -51,20 +51,20 @@ com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 
 # Color will also be used for image comparison, not recommended for websides with many screenshots
 # or consequently changing content 
-com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
+com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.IMAGE_HEIGHT = 600
+com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 
 # value for the width of the image, only used if USE_ORIGINAL_SIZE is false
-com.xceptance.xlt.ai.IMAGE_WIDTH = 1000
+com.xceptance.xlt.ai.IMAGE_WIDTH = 1200
 
 # procedural value for the difference level used for comparing the screenshots to another
-com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
+com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 20
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
