--- a/config/ai.properties
+++ b/config/ai.properties
@@ -28,7 +28,7 @@ com.xceptance.xlt.ai.ID = localmachine
 # Bound to the choosen test case or not.
 # If the flag is true the name of the used test case will be used for localization.
 # the value false let the network unbound and can be used for different testcases
-com.xceptance.xlt.ai.TESTCASE_BOUND = false
+com.xceptance.xlt.ai.TESTCASE_BOUND = true
 
 # Possibility to name the unbound folder.
 com.xceptance.xlt.ai.TESTCASE_NAME = name
@@ -39,7 +39,7 @@ com.xceptance.xlt.ai.TESTCASE_NAME = name
 # com.xceptance.xlt.ai.TRAINING = false
 # In training mode all data under the specific name of the network, in the training directory "used for training"
 # will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
-com.xceptance.xlt.ai.TRAINING = false
+com.xceptance.xlt.ai.TRAINING = true
 
 # The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.ai.WAITINGTIME = 1000
@@ -55,7 +55,7 @@ com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
 com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
