added properties reader and reworked constanrs usage for trainer

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -55,7 +55,7 @@ com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
 com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
