bugfix and testing

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -39,7 +39,7 @@ com.xceptance.xlt.ai.TESTCASE_NAME = name
 # com.xceptance.xlt.ai.TRAINING = false
 # In training mode all data under the specific name of the network, in the training directory "used for training"
 # will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
-com.xceptance.xlt.ai.TRAINING = true
+com.xceptance.xlt.ai.TRAINING = false
 
 # The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.ai.WAITINGTIME = 1000
@@ -49,9 +49,9 @@ com.xceptance.xlt.ai.WAITINGTIME = 1000
 # procedural value between 0 - 100.00 percent
 com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
 
-# Color will also be used for image comparison, not recommended for websides with many screenshots
-# or consequently changing content 
-com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
+# Color will also be used for image comparison, useful for websides with much almost same size content.
+# Constent is every element on the webside.
+com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
@@ -64,7 +64,7 @@ com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 com.xceptance.xlt.ai.IMAGE_WIDTH = 1200
 
 # procedural value for the difference level used for comparing the screenshots to another
-com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 20
+com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
