fixed bug with original size and nullpointer exception

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -5,11 +5,11 @@
 #com.xceptance.xlt.ai.TRAINING = true
 #com.xceptance.xlt.ai.WAITINGTIME = 1000   
 #com.xceptance.xlt.ai.INTENDED_PERCENTAGE_MATCH = 0.80
-#com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = false
-#com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+#com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
+#com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
 #com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 #com.xceptance.xlt.ai.IMAGE_WIDTH = 600
-#com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
+#com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 20
 #com.xceptance.xlt.ai.LEARNING_RATE = 0.2
 #com.xceptance.xlt.ai.FORMAT = "png"
 #########################################################################
@@ -55,7 +55,7 @@ com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
 com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
