Constants and properties changed to unified form, bugfix in control flow AI

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -39,7 +39,7 @@ com.xceptance.xlt.ai.TESTCASE_NAME = name
 # com.xceptance.xlt.ai.TRAINING = false
 # In training mode all data under the specific name of the network, in the training directory "used for training"
 # will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
-com.xceptance.xlt.ai.TRAINING = false
+com.xceptance.xlt.ai.TRAINING = true
 
 # The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.ai.WAITINGTIME = 1000
@@ -55,7 +55,7 @@ com.xceptance.xlt.ai.USE_COLOR_FOR_COMPARISON = true
 
 # Parameter for enabling down scaling from screenshots or not, this can drastically change 
 # the performance of the algorithm
-com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = false
+com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
 
 # value for the height of the image, only used if USE_ORIGINAL_SIZE is false
 com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
@@ -64,7 +64,7 @@ com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 com.xceptance.xlt.ai.IMAGE_WIDTH = 1200
 
 # procedural value for the difference level used for comparing the screenshots to another
-com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 10
+com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 0.1
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
