small code refactoring, added comments and doc
minor bugfix in util.Helper

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -39,7 +39,7 @@ com.xceptance.xlt.ai.TESTCASE_NAME = name
 # com.xceptance.xlt.ai.TRAINING = false
 # In training mode all data under the specific name of the network, in the training directory "used for training"
 # will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
-com.xceptance.xlt.ai.TRAINING = true
+com.xceptance.xlt.ai.TRAINING = false
 
 # The time the program waits for a page to load before it takes the screenshot
 com.xceptance.xlt.ai.WAITINGTIME = 1000
@@ -64,12 +64,12 @@ com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 com.xceptance.xlt.ai.IMAGE_WIDTH = 1200
 
 # procedural value for the difference level used for comparing the screenshots to another
-com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 0.1
+com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 0.2
 
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
 # but the accurancy can decrease with higher values
-com.xceptance.xlt.ai.LEARNING_RATE = 0.2
+com.xceptance.xlt.ai.LEARNING_RATE = 0.1
 
 # image format for saving
 # compatible formats are jpg, png, bmp, jpeg
