bugfix and controll flow change in tools, information  were not correct updated for selftest

--- a/config/ai.properties
+++ b/config/ai.properties
@@ -9,9 +9,9 @@
 #com.xceptance.xlt.ai.USE_ORIGINAL_SIZE = true
 #com.xceptance.xlt.ai.IMAGE_HEIGHT = 800
 #com.xceptance.xlt.ai.IMAGE_WIDTH = 600
-#com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 20
+#com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 0.2
 #com.xceptance.xlt.ai.LEARNING_RATE = 0.2
-#com.xceptance.xlt.ai.FORMAT = "png"
+#com.xceptance.xlt.ai.FORMAT = png
 #########################################################################
 
 # Global flag to turn visual asserations off, nothing will be done, all code is skipped
@@ -69,7 +69,7 @@ com.xceptance.xlt.ai.PERCENTAGE_DIFFERENCE = 0.2
 # value for the learning algorithm allowed values are between 0.0 - 1.0
 # affect the learn speed of the neural network, greater values are for faster learning
 # but the accurancy can decrease with higher values
-com.xceptance.xlt.ai.LEARNING_RATE = 0.1
+com.xceptance.xlt.ai.LEARNING_RATE = 0.3
 
 # image format for saving
 # compatible formats are jpg, png, bmp, jpeg
