--- a/config/ai.properties
+++ b/config/ai.properties
@@ -27,7 +27,7 @@ com.xceptance.xlt.ai.ID = localmachine
 
 # Bound to the choosen test case or not.
 # If the flag is true the name of the used test case will be used for localization.
-# the value false let the network unbound and can be used for different testcases
+# The value false let the network unbound and can be used for different testcases
 com.xceptance.xlt.ai.TESTCASE_BOUND = true
 
 # Possibility to name the unbound folder.
@@ -41,7 +41,7 @@ com.xceptance.xlt.ai.TESTCASE_NAME = name
 # will be used for training the network. Otherwise the new screenshots get sort in recognized and unrecognized.
 com.xceptance.xlt.ai.TRAINING = false
 
-# The time the program waits for a page to load before it takes the screenshot
+# The time the program waits for a page to load before it takes the screenshot (in ms).
 com.xceptance.xlt.ai.WAITINGTIME = 1000
 
 # Desired percentage value for the self test, until this barrier is confirmed the network will 
